--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
 				<div class="login-text">
 					<h2>Welcome!</h2>
 					<p>Create your account.<br />For Free!</p>
-					<a href="./signup/signup.html" class="btn">Sign Up</a>
+					<a href="/" class="btn">Sign Up</a>
 				</div>
 			</div>
 			<div class="col-right">
@@ -238,41 +238,41 @@
 		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-	<script >
+	<script>
 		const loginForm = document.querySelector("#loginForm");
-const emailInput = document.querySelector("#emailInput");
-const passwordInput = document.querySelector("#passwordInput");
-const forgotPasswordBtn = document.querySelector("#forgotPasswordBtn");
+		const emailInput = document.querySelector("#emailInput");
+		const passwordInput = document.querySelector("#passwordInput");
+		const forgotPasswordBtn = document.querySelector("#forgotPasswordBtn");
 
-loginForm.addEventListener("submit", formsubmit);
+		loginForm.addEventListener("submit", formsubmit);
 
-async function formsubmit(e) {
-	e.preventDefault();
+		async function formsubmit(e) {
+			e.preventDefault();
 
-	try {
-		let loginobj = {
-			email: emailInput.value,
-			password: passwordInput.value,
-		};
-		console.log(loginobj);
+			try {
+				let loginobj = {
+					email: emailInput.value,
+					password: passwordInput.value,
+				};
+				console.log(loginobj);
 
-		let res = await axios.post("http://localhost:3001/user/login", loginobj);
-		if (res.status == 200) {
-			console.log(res.data.token);
-			localStorage.setItem("token", res.data.token);
-			window.location.href = "/expense";
+				let res = await axios.post("http://localhost:5000/user/login", loginobj);
+				if (res.status == 200) {
+					console.log(res.data.token);
+					localStorage.setItem("token", res.data.token);
+					window.location.href = "/expense";
+				}
+			} catch (error) {
+				console.log(error);
+				let errorDiv = document.querySelector("#errordiv");
+				// errorDiv.classList = "error";
+				errorDiv.textContent = error.message;
+				document.body.appendChild(errorDiv);
+				setTimeout(() => {
+					errorDiv.remove();
+				}, 5000);
+			}
 		}
-	} catch (error) {
-		console.log(error);
-		let errorDiv = document.querySelector("#errordiv");
-		// errorDiv.classList = "error";
-		errorDiv.textContent = error.message;
-		document.body.appendChild(errorDiv);
-		setTimeout(() => {
-			errorDiv.remove();
-		}, 3001);
-	}
-}
 
 	</script>
 </body>
