--- a/public/index.html
+++ b/public/index.html
@@ -256,7 +256,7 @@
 				};
 				console.log(loginobj);
 
-				let res = await axios.post("http://localhost:5000/user/login", loginobj);
+				let res = await axios.post(`/user/login`, loginobj);
 				if (res.status == 200) {
 					console.log(res.data.token);
 					localStorage.setItem("token", res.data.token);
